Show user urls on the right.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,3 +12,5 @@
           =yield
         .col-xs-6
           =render partial: 'users/widget'
+          -if current_user
+            =render partial: 'users/urls'
