--- a/app/views/urls/_widget.html.haml
+++ b/app/views/urls/_widget.html.haml
@@ -1,4 +1,5 @@
 %hr
+=label_tag :url, "Shortened Url"
 =text_field_tag :url, short_url(@url), class: 'form-control', id: 'short_url'
 -if @url.title
   %h2
