Re-render the user_url list on url creation.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,5 +12,6 @@
           =yield
         .col-xs-6
           =render partial: 'users/widget'
-          -if current_user
-            =render partial: 'users/urls'
+          #user_urls
+            -if current_user
+              =render partial: 'users/urls'
