--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,9 @@
   %head
     %title Terse
     =stylesheet_link_tag "application", media: "all"
+    =stylesheet_link_tag "//fonts.googleapis.com/css?family=Oswald"
+    =stylesheet_link_tag "//fonts.googleapis.com/css?family=Roboto+Slab"
+    =stylesheet_link_tag "//fonts.googleapis.com/css?family=Roboto"
     =javascript_include_tag "application"
     =csrf_meta_tags
   %body
