--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,15 @@
  *= require_tree .
  */
 
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+h1, h2, h3, h4 {
+  // font-family: 'Roboto Slab', serif;
+  font-family: 'Oswald', sans-serif;
+}
+
 #result {
   margin-top:20px;
 }
